--- a/Runtime/AWS_AutomaticWorldStreaming.asmdef
+++ b/Runtime/AWS_AutomaticWorldStreaming.asmdef
@@ -7,7 +7,8 @@
         "GUID:69448af7b92c7f342b298e06a37122aa",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:84651a3751eca9349aac36a66bba901b"
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
