--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/MunteanuIon6565/Automatic-Streaming-World-v1"
   },
   "dependencies": {
-    "com.unity.addressables": "1.21.17"
+    "com.unity.addressables": "1.21.17",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.5.10"
   }
 }
