--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "url": "https://github.com/MunteanuIon6565/Automatic-Streaming-World-v1"
   },
   "dependencies": {
-    "com.unity.addressables": "1.21.17",
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git#2.5.10"
-  }
+    "com.unity.addressables": "1.21.17"
+      }
 }
